objects/The_Bank__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Current_Actual__c</fullName>
        <label>Current Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Self_Limit__c</fullName>
        <label>Daily Self Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Limit_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for check is current actual is reached to daily limit</description>
        <inlineHelpText>This field is used for check is current actual is reached to daily limit</inlineHelpText>
        <label>Is Limit Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified__c</fullName>
        <label>Last Modified</label>
        <type>DateTime</type>
    </fields>
    <label>The Bank</label>
</CustomObject>